adding track getById endpoint to swagger
