# app/api/v1/routes/track.js
@@ -1,0 +1,12 @@
+const express = require("express");
+
+const { getById } = require("../controllers/trackController");
+
+const router = express.Router();
+router.route("/:trackId").get(getById);
+// .patch(trackController.updateTrack)
+// .post(postControllers);
+// list latest Revision for by trackId
+// router.route("/:trackId/latestRevision").get(trackController.getLatestRevision);
+
+module.exports = router;
